plots distribution of # of genes, or # of species

--- a/jupyter/incorporate_tsv_info.ipynb
+++ b/jupyter/incorporate_tsv_info.ipynb
@@ -124,7 +124,99 @@
    },
    "outputs": [],
    "source": [
-    "ccdb.node_df"
+    "ccdb.node_df.sort_values(by='ConnectedComponents')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "ccdb.node_df.groupby('ConnectedComponents')['organism'].nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "#plt.yscale('log', nonposy='clip')\n",
+    "plot_series = ccdb.node_df.groupby('ConnectedComponents')['organism'].nunique()\n",
+    "n_bins = plot_series.max()\n",
+    "plot_series.plot.hist(bins=n_bins, ax=ax)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for tup, df in ccdb.node_df.groupby('ConnectedComponents')['organism'].nunique():\n",
+    "    print('component {}: {} species'.format(tup, df.shape[0]))\n",
+    "    #print(df.shape[0])\n",
+    "    print(df.head(3))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "#plt.yscale('log', nonposy='clip')\n",
+    "ccdb.node_df.groupby('ConnectedComponents')['organism'] #.count().plot.hist(bins=1000, ax=ax)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "#plt.yscale('log', nonposy='clip')\n",
+    "ccdb.node_df.groupby('ConnectedComponents')['ConnectedComponents'].count().plot.hist(bins=1000, ax=ax)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for c in ccdb.components.values():\n",
+    "    print(sum(c.Counter.values()))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "    def histogram_of_species(self):\n",
+    "        pass\n",
+    "    \n",
+    "histogram_of_species(ccdb)"
    ]
   },
   {
@@ -169,9 +261,33 @@
    },
    "outputs": [],
    "source": [
+    "#dbc.databases[2].connected_components.components"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "for n, d in dbc.databases.items():\n",
     "    print(d.connected_components.num_components)\n",
-    "    print(d.connected_components)"
+    "    #print(d.connected_components)\n",
+    "    print(d.connected_components.print_cross_species_connected_component_summaries())"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for n, d in dbc.databases.items():\n",
+    "    d.connected_components.histogram_of_species()"
    ]
   },
   {
