--- a/jupyter/plot_available_50M_results.ipynb
+++ b/jupyter/plot_available_50M_results.ipynb
@@ -272,6 +272,19 @@
    "outputs": [],
    "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "dbc.summary.plot.scatter(x='edges', y='construction minutes', c='nodes', ax=ax)\n",
+    "#plt.xlabel('database construction time (minutes)')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
     "dbc.summary.plot.scatter(x='construction minutes', y='nodes', c='cutoff', ax=ax)\n",
     "plt.xlabel('database construction time (minutes)')"
    ]
@@ -284,8 +297,33 @@
    },
    "outputs": [],
    "source": [
+    "sorted([float(re.search('50M_(\\d+.\\d*)', f).groups()[0]) for f in files])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
     "dbc.summary.plot.scatter(x='cutoff', y='# connected components', c='density', ax=ax)\n",
+    "plt.xlabel('partial correlation cutoff')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "dbc.summary.plot.scatter(x='cutoff', y='total # genes in connected components', \n",
+    "                         c='# connected components', ax=ax)\n",
     "plt.xlabel('partial correlation cutoff')"
    ]
   },
@@ -354,6 +392,30 @@
     "dbc.summary.plot.scatter(x='cutoff', y='frac cc with multiple species',\n",
     "                         c='# connected components', ax=ax)\n",
     "plt.xlabel('partial correlation cutoff')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for n, d in dbc.databases.items():\n",
+    "    d.connected_components.histogram_of_nodes()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for n, d in dbc.databases.items():\n",
+    "    d.connected_components.histogram_of_species()"
    ]
   }
  ],
