improve python reading & analytics
- don't re-run connected components script if it exists
- return connected components object by cutoff.  Uses dataframe.

--- a/jupyter/incorporate_tsv_info.ipynb
+++ b/jupyter/incorporate_tsv_info.ipynb
@@ -146,9 +146,21 @@
    },
    "outputs": [],
    "source": [
+    "ccdb.node_df.head(2)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
     "#plt.yscale('log', nonposy='clip')\n",
     "plot_series = ccdb.node_df.groupby('ConnectedComponents')['organism'].nunique()\n",
+    "print(type(plot_series[0]))\n",
     "n_bins = plot_series.max()\n",
     "plot_series.plot.hist(bins=n_bins, ax=ax)\n"
    ]
@@ -161,36 +173,12 @@
    },
    "outputs": [],
    "source": [
-    "for tup, df in ccdb.node_df.groupby('ConnectedComponents')['organism'].nunique():\n",
-    "    print('component {}: {} species'.format(tup, df.shape[0]))\n",
-    "    #print(df.shape[0])\n",
-    "    print(df.head(3))"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
     "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
     "#plt.yscale('log', nonposy='clip')\n",
-    "ccdb.node_df.groupby('ConnectedComponents')['organism'] #.count().plot.hist(bins=1000, ax=ax)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
-    "#plt.yscale('log', nonposy='clip')\n",
-    "ccdb.node_df.groupby('ConnectedComponents')['ConnectedComponents'].count().plot.hist(bins=1000, ax=ax)\n"
+    "plot_series=ccdb.node_df.groupby('ConnectedComponents')['ConnectedComponents'].count()\n",
+    "n_bins = plot_series.max()\n",
+    "print(type(plot_series[0]))\n",
+    "plot_series.plot.hist(bins=n_bins/2, ax=ax)\n"
    ]
   },
   {
