--- a/jupyter/plot_available_50M_results.ipynb
+++ b/jupyter/plot_available_50M_results.ipynb
@@ -99,17 +99,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
-   "source": [
-    "sorted([float(re.search('50M_(\\d+.\\d*)', f).groups()[0]) for f in files])"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
     "collapsed": true
    },
    "outputs": [],
@@ -125,7 +114,18 @@
    },
    "outputs": [],
    "source": [
-    "dbc = DatabaseComparison(desc_string='50M')\n",
+    "cutoffs"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dbc  = DatabaseComparison(desc_string='50M')\n",
     "dbc.make_dbs(cutoffs)"
    ]
   },
@@ -417,6 +417,37 @@
     "for n, d in dbc.databases.items():\n",
     "    d.connected_components.histogram_of_species()"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p1 = dbc.cc_by_cutoff_num(0.02).histogram_of_species()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "p2 = dbc.cc_by_cutoff_num(0.025).histogram_of_species()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
