heatmap of organism abundance in clusters

--- a/jupyter/plot_available_50M_results.ipynb
+++ b/jupyter/plot_available_50M_results.ipynb
@@ -271,9 +271,11 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5,2))\n",
     "dbc.summary.plot.scatter(x='edges', y='construction minutes', c='nodes', ax=ax)\n",
-    "#plt.xlabel('database construction time (minutes)')"
+    "plt.ylabel('database construction\\ntime (minutes)')\n",
+    "plt.tight_layout()\n",
+    "fig.savefig('161213_db_construction_linear_with_edges.png', dpi=600)"
    ]
   },
   {
@@ -374,10 +376,13 @@
    },
    "outputs": [],
    "source": [
-    "fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "fig, ax = plt.subplots(1, 1, figsize=(5,2.5))\n",
     "dbc.summary.plot.scatter(x='cutoff', y='# cc with multiple species',\n",
     "                         c='# connected components', ax=ax)\n",
-    "plt.xlabel('partial correlation cutoff')"
+    "plt.xlabel('partial correlation cutoff')\n",
+    "plt.ylabel('# of connected components\\nwith multiple species')\n",
+    "plt.tight_layout()\n",
+    "fig.savefig('161213_cc_vs_pcor_cutoff.png', dpi=600)"
    ]
   },
   {
@@ -438,6 +443,22 @@
    "outputs": [],
    "source": [
     "p2 = dbc.cc_by_cutoff_num(0.025).histogram_of_species()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "for n, d in dbc.databases.items():\n",
+    "    try:\n",
+    "        d.connected_components.heatmap_of_organisms_appearance_in_components()\n",
+    "    except:\n",
+    "        print(d.cutoff)\n",
+    "        print('failed for {}'.format(n))"
    ]
   },
   {
