--- a/jupyter/cluster_map.ipynb
+++ b/jupyter/cluster_map.ipynb
@@ -171,7 +171,7 @@
    },
    "outputs": [],
    "source": [
-    "heatmap_of_organisms_appearance_in_components(ccdb) #.index.str.replace('[ ]+\\(UID[0-9]+\\)', '')"
+    "#heatmap_of_organisms_appearance_in_components(ccdb) #.index.str.replace('[ ]+\\(UID[0-9]+\\)', '')"
    ]
   },
   {
@@ -197,12 +197,8 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
-   "outputs": [],
+   "cell_type": "raw",
+   "metadata": {},
    "source": [
     "d = pd.DataFrame(heatmap_of_organisms_appearance_in_components(ccdb))\n",
     "dp = d.pivot(columns='ConnectedComponents', values='count(organism)').fillna(0)\n",
@@ -248,7 +244,47 @@
    },
    "outputs": [],
    "source": [
-    "hs = ccdb.histogram_of_species()"
+    "hs = ccdb.histogram_of_species(figsize=(4, 2))\n",
+    "plt.ylabel('# of connected\\ncomponents')\n",
+    "#hs.savefig('161213_hist_species_0.02.png', dpi=600)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "    def histogram_of_species(self):\n",
+    "        print('Cutoff {}: plot # of different species for each connected component.'\n",
+    "              ''.format(self.cutoff))\n",
+    "        fig, ax = plt.subplots(1, 1, figsize=(5,3))\n",
+    "        #plt.yscale('log', nonposy='clip')\n",
+    "        plot_series = self.node_df.groupby('ConnectedComponents')['organism'].nunique()\n",
+    "        n_bins = plot_series.max()\n",
+    "        if n_bins > 50:\n",
+    "            n_bins = int(n_bins/2.)\n",
+    "        plot_series.plot.hist(bins=n_bins, ax=ax)\n",
+    "        ax.set_xlabel('# species in connected component')\n",
+    "        ax.set_ylabel('# of connected components')\n",
+    "        plt.tight_layout()\n",
+    "        return fig"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "df = pd.DataFrame(np.abs(np.random.randn(10,10)),columns=['A','B','C','D','E','F','G','H','I','J'], index=range(10))\n",
+    "df.plot(kind='bar',stacked=True,figsize=(10,5))\n",
+    "colors = plt.cm.GnBu(np.linspace(0, 1, 10))\n",
+    "df.plot(kind='bar', stacked=True, figsize=(10, 5), color=colors)"
    ]
   },
   {
