--- a/jupyter/plot_available_50M_results.ipynb
+++ b/jupyter/plot_available_50M_results.ipynb
@@ -431,6 +431,17 @@
    },
    "outputs": [],
    "source": [
+    "p1 = dbc.cc_by_cutoff_num(0.0125).histogram_of_species()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
     "p1 = dbc.cc_by_cutoff_num(0.02).histogram_of_species()"
    ]
   },
