big writing chunk

--- a/writeups/final_report/neo4j.bib
+++ b/writeups/final_report/neo4j.bib
@@ -3,6 +3,12 @@
 
 %% Created for Janet Matsen at 2016-11-16 20:22:12 -0800 
 
+@inproceedings{fan2015case,
+  title={The Case Against Specialized Graph Analytics Engines.},
+  author={Fan, Jing and Raj, Adalbert Gerald Soosai and Patel, Jignesh M},
+  booktitle={CIDR},
+  year={2015}
+}
 
 %% Saved with string encoding Unicode (UTF-8) 
 
